minor QOL fixes
- prevent direct clicking on bookmarklet buttons
  (only dragging works now)
- fix overflow/scroll issues with modals
- fix width jumping on the GPA counters
- fix scrollbar colors on non-webkit browsers

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@supports not (selector(::-webkit-scrollbar)) {
+  :root {
+    /* not as customizable as ::-webkit-scrollbar-* but better than nothing */
+    scrollbar-color: #62738a #374151;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 20px;
 }
